--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@slack/bolt": "^4.4.0",
     "dotenv": "^17.2.1",
-    "dayjs": "^1.11.10"       // 👈 これを追加
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {},
   "description": ""
